--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.75.6",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
