--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.6.0",
     "tailwindcss": "^4.1.5",
     "zod": "^3.24.4"
