--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.6",
+    "@tanstack/react-query-devtools": "^5.76.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
